# ChangeLog for media-sound/alsa-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.268 2009/07/02 19:18:42 maekke Exp $

  02 Jul 2009; Markus Meier <maekke@gentoo.org> alsa-utils-1.0.19-r2.ebuild:
  amd64 stable, bug #272682

  02 Jul 2009; Brent Baude <ranger@gentoo.org> alsa-utils-1.0.19-r2.ebuild:
  Marking alsa-utils-1.0.19-r2 ppc64 stable for bug 272682

  02 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  alsa-utils-1.0.19-r2.ebuild:
  stable x86, bug 272682

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  alsa-utils-1.0.19-r2.ebuild:
  Stable on alpha, bug #272682

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> alsa-utils-1.0.19-r2.ebuild:
  Stable for HPPA (bug #272682).

  04 Jun 2009; Ferris McCormick <fmccor@gentoo.org>
  alsa-utils-1.0.19-r2.ebuild:
  Sparc stable, part of Bug #272682.

*alsa-utils-1.0.20-r1 (04 Jun 2009)

  04 Jun 2009; Steve Dibb <beandog@gentoo.org> +alsa-utils-1.0.20-r1.ebuild:
  Drop optional midi support, bug 272659

  06 May 2009; Mike Frysinger <vapier@gentoo.org> alsa-utils-1.0.14.ebuild,
  alsa-utils-1.0.15.ebuild, alsa-utils-1.0.16.ebuild,
  alsa-utils-1.0.16-r2.ebuild, alsa-utils-1.0.17.ebuild,
  alsa-utils-1.0.18.ebuild, alsa-utils-1.0.19.ebuild,
  alsa-utils-1.0.19-r1.ebuild, alsa-utils-1.0.19-r2.ebuild,
  alsa-utils-1.0.20.ebuild:
  Rename modprobe.d/alsa file to alsa.conf.

*alsa-utils-1.0.20 (06 May 2009)

  06 May 2009; Steve Dibb <beandog@gentoo.org> +alsa-utils-1.0.20.ebuild:
  Version bump

*alsa-utils-1.0.19-r2 (10 Apr 2009)

  10 Apr 2009; Steve Dibb <beandog@gentoo.org> +alsa-utils-1.0.19-r2.ebuild:
  Make xmlto an optional dep, bug 246526

  31 Mar 2009; Raúl Porcel <armin76@gentoo.org> alsa-utils-1.0.16.ebuild,
  alsa-utils-1.0.17.ebuild:
  arm/sh stable

  17 Mar 2009; Doug Goldstein <cardoe@gentoo.org> alsa-utils-1.0.18.ebuild:
  mark amd64 stable

*alsa-utils-1.0.19-r1 (21 Feb 2009)
