@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/alsa-utils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.268 2009/07/02 19:18:42 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-utils/ChangeLog,v 1.269 2009/07/31 21:49:39 beandog Exp $
+
+*alsa-utils-1.0.20-r2 (31 Jul 2009)
+
+  31 Jul 2009; Steve Dibb <beandog@gentoo.org> +alsa-utils-1.0.20-r2.ebuild,
+  +files/alsasound.confd-r3, +files/alsasound.initd-r3:
+  Remove UNLOAD_ON_STOP and KILLPROC_ON_STOP options
 
   02 Jul 2009; Markus Meier <maekke@gentoo.org> alsa-utils-1.0.19-r2.ebuild:
   amd64 stable, bug #272682
